--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "bootstrap": "^4.6.0",
+    "colorette": "^1.2.2",
+    "electron-to-chromium": "^1.3.689",
+    "react": "^16.7.0",
     "react-bootstrap": "^1.4.3",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.7.0",
     "react-icons": "^4.1.0",
     "react-numeric-input": "^2.2.3",
     "react-redux": "^7.2.2",
